<resources>
    <string name="app_name">IntentsProj</string>
    <string name="num1">Number 1</string>
    <string name="num2">Number 2</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="sum">Sum</string>
    <string name="ok">Ok</string>
    <string name="msg">Sending message</string>
</resources>